--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -14,7 +14,7 @@
 
 body{
     font-family: "Overpass";
-    
+    scroll-snap-stop: none;
     background-color: rgb(42, 42, 42);
 }
 
@@ -27,7 +27,7 @@ body{
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
-      max-width: 340px;
+      max-width: 400px;
       min-width: 330px;
       grid-template-rows: "1fr auto 1fr"; 
       /* background-color: hsl(var(--clr-dark-blue)); */
@@ -65,9 +65,20 @@ body{
     flex-wrap: wrap;
     background-color: hsl(var(--clr-primary-orange));
     border: none;
-    border-radius: 10px;
-    padding: 5px;
+    border-radius: 25px;
+    padding: 12px;
+    color: hsl(var(--clr-white));
+    font-size: 15px;
+    margin: 10px 0px;
+    letter-spacing: 3px;
+   
     
+}
+.Submit:hover{
+    background-color: hsl(var(--clr-white));
+    color: hsl(var(--clr-primary-orange));
+  
+    border: none;
 }
 
 span{
@@ -75,22 +86,54 @@ span{
 }
 
 img{
-    padding:8px;
+    padding:15px;
     border-radius: 50%;
     background-color: hsl(var(--clr-medium-gray));
+    background:linear-gradient( hsl(var(--clr-dark-blue)),hsl(var(--clr-darkest-blue)));
+    
+}
+.rating{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 3px;
+
 }
 
 .rating-circle{
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: auto;
     /* width: clamp(45px, 12vw, 52px);
     height: clamp(45px, 12vw, 52px); */
+    width: clamp(28px, 11vw, 44px);
+    height: clamp(28px, 11vw, 45px);
     padding-top: 4px;
-    
-
     padding:8px;
     border-radius: 50%;
-    background-color: hsl(var(--clr-medium-gray));
+    background:linear-gradient( hsl(var(--clr-dark-blue)),hsl(var(--clr-darkest-blue)));
+    align-content: center;
+    justify-content: center;
+    margin: 20px 0px;
+    
 }
+input[type=radio]{
+    opacity: 0;
+    
+}
+#rating-1,#rating-2,#rating-3,#rating-4,#rating-5{
+    display: none;
+    /* visibility: hidden; */
+}
+
+
+.rating-circle:hover{
+    background: hsl(var(--clr-primary-orange));
+    color:hsl(var(--clr-white))
+}
+.rating input:checked ~ .rating-circle {
+    background:hsl(var(--clr-medium-gray));
+    color: white; 
+}
+
+
+
+
 
