--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -27,7 +27,8 @@ body{
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
-      max-width: 400px;
+      max-width: 370px;
+      /* max-width: 17rem; */
       min-width: 330px;
       grid-template-rows: "1fr auto 1fr"; 
       /* background-color: hsl(var(--clr-dark-blue)); */
@@ -79,13 +80,14 @@ body{
     color: hsl(var(--clr-primary-orange));
   
     border: none;
-}
+}   
 
-span{
+span,.thankyoutext{
     color: hsl(var(--clr-light-gray));
+    justify-content: center;
 }
 
-img{
+.star-img{
     padding:15px;
     border-radius: 50%;
     background-color: hsl(var(--clr-medium-gray));
@@ -108,7 +110,8 @@ img{
     padding-top: 4px;
     padding:8px;
     border-radius: 50%;
-    background:linear-gradient( hsl(var(--clr-dark-blue)),hsl(var(--clr-darkest-blue)));
+    /* background:linear-gradient( hsl(var(--clr-dark-blue)),hsl(var(--clr-darkest-blue))); */
+    background: hsla(217, 7%, 35%, 0.2);
     align-content: center;
     justify-content: center;
     margin: 20px 0px;
@@ -137,6 +140,35 @@ input[type=radio]{
 }
 
 
+.illustration-thank-you{
+    display: flex;
+    width:  9rem;
+    justify-content: center;
+    margin: 4px;
+    margin: 15px auto;
+
+}
+
+.tag {
+    display: flex;
+    color:hsl(var(--clr-primary-orange));
+    /* background:linear-gradient( hsl(var(--clr-dark-blue)),hsl(var(--clr-darkest-blue))); */
+    background: hsla(217, 7%, 35%, 0.2);
+    padding: 8px;
+    border-radius: 25px;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    margin: 15px auto;
+
+}
+.thankyoutext{
+    text-align: center;
+}
+.selected-number{
+    color:hsl(var(--clr-primary-orange));
+
+}
 
 
 
